--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/drawer": "^7.3.0",
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/stack": "^7.2.2",
-    "expo": "~52.0.40",
+    "expo": "^52.0.41",
     "expo-asset": "^11.0.5",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -38,6 +38,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-blur": "^3.2.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
@@ -46,7 +47,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-voice": "^0.3.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
