--- a/app.json
+++ b/app.json
@@ -35,10 +35,13 @@
           "imageResizeMode": "contain",
           "backgroundColor": "#000000"
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow this app to access your location."
+        }
       ]
-    ],
-    "experiments": {
-      "typedRoutes": true
-    }
+    ]
   }
 }
